--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.1",
     "formik": "^2.2.9",
     "luxon": "^1.27.0",
+    "nanoid": "^3.1.23",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
